--- a/WD Content/LGAlertSheet/LGDecoratedAlertView.xib
+++ b/WD Content/LGAlertSheet/LGDecoratedAlertView.xib
@@ -32,7 +32,7 @@
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ztP-oJ-jVB" userLabel="OKButton">
                             <rect key="frame" x="20" y="96.5" width="240" height="36"/>
-                            <color key="backgroundColor" red="0.1960784314" green="0.58823529409999997" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.0" green="0.4431372549" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="36" id="7O8-F5-GKm"/>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="e3d-xK-9SV"/>
