--- a/WD Content/LGAlertSheet/LGVAlertView.xib
+++ b/WD Content/LGAlertSheet/LGVAlertView.xib
@@ -67,7 +67,7 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a0T-yT-UEs" userLabel="otherButton">
                             <rect key="frame" x="20" y="199" width="240" height="40"/>
-                            <color key="backgroundColor" red="0.1960784314" green="0.58823529409999997" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.94117647059999998" green="0.35294117650000001" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="u2e-bG-ENO"/>
                             </constraints>
